tests/incremental_basic/incremental_basic.exp
Error: a.js:2
  2: var a: string = 0;
                     ^ number. This type is incompatible with
  2: var a: string = 0;
            ^^^^^^ string

Error: b.js:3
  3: var b: number = a;
                     ^ string. This type is incompatible with
  3: var b: number = a;
            ^^^^^^ number

Error: c.js:3
  3: var c: string = b;
                     ^ number. This type is incompatible with
  3: var c: string = b;
            ^^^^^^ string


Found 3 errors
Error: a.js:2
  2: var a: string = 0;
                     ^ number. This type is incompatible with
  2: var a: string = 0;
            ^^^^^^ string


Found 1 error
Error: c.js:3
  3: var c: string = b;
                     ^ number. This type is incompatible with
  3: var c: string = b;
            ^^^^^^ string


Found 1 error
Error: c.js:3
  3: var c: string = b;
                     ^ number. This type is incompatible with
  3: var c: string = b;
            ^^^^^^ string


Found 1 error
